<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimage"
    tools:context=".SignupActivity">

    <!-- Container for the Sign up form -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="841dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@drawable/rounded_top_corners"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/backgroundimage" />

        <TextView
            android:id="@+id/initialsCircle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="-30dp"
            android:background="@drawable/circle_bg"
            android:gravity="center"
            android:text="CC"
            android:textColor="@android:color/white"
            android:textSize="20sp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:background="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-40dp"
            android:backgroundTint="@color/lightCream"
            android:padding="12dp"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/TrackOrderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:backgroundTint="@color/lightCream"
            android:padding="12dp"
            android:text="@string/track_order"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="-33dp"
            android:layout_marginRight="150dp"
            android:background="@drawable/track" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="24dp"
            android:background="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:backgroundTint="@color/lightCream"
            android:padding="12dp"
            android:text="@string/return_exchange"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="-33dp"
            android:layout_marginRight="150dp"
            android:background="@drawable/exchange" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="24dp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:backgroundTint="@color/lightCream"
            android:padding="12dp"
            android:text="@string/account"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="-33dp"
            android:layout_marginRight="150dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/account" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="24dp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/settingsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:padding="12dp"
            android:text="@string/settings"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="-33dp"
            android:layout_marginRight="150dp"
            android:background="@drawable/settings" />

        <Spinner
            android:id="@+id/themeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="8dp"
            android:entries="@array/theme_modes"
            android:spinnerMode="dropdown"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="24dp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/languageToggle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:background="@drawable/circle_bg"
            android:gravity="center"
            android:text="EN"
            android:textColor="@android:color/white"
            android:textSize="16sp" />


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:backgroundTint="@color/lightCream"
            android:padding="12dp"
            android:text="SIGN OUT"
            android:textColor="@color/black" />


    </LinearLayout>
    <!-- Fixed Bottom Navigation -->
    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="4"
        android:background="@color/white"
        android:elevation="8dp"
        android:layout_marginTop="730dp"
        android:paddingVertical="8dp">

        <LinearLayout
            android:id="@+id/nav_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/home"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textSize="10sp"
                android:textColor="@color/gray_600"/>
        </LinearLayout>



        <LinearLayout
            android:id="@+id/nav_cart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/cart"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart"
                android:textSize="10sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_favourites"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/favorites"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wishlist"
                android:textSize="10sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_account"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/account"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textSize="10sp"
                android:textColor="@color/purple_500"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
